he cambiado el css

--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body{
 .titulo{
     padding-left: 38%;
     border: 1px black solid;
-    background-color: #37ff33;
+    background-color: #95ffc5;
 }
 
 .indice{
