--- a/index.css
+++ b/index.css
@@ -30,7 +30,7 @@ body{
     position: fixed;
     bottom: 0;
     width: 100%;
-    background-color: #37ff33;
+    background-color: #95ffc5;
     padding-top: 0.7%;
     padding-bottom: 0.7%;
 }
