--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body{
 }
 
 .indice{
-    background-color: rgb(255, 196, 0)5, 255, 0;
+    background-color: #fad48d;
     border: 1px black solid;
     display: inline-block;
     position: fixed;
