--- a/index.css
+++ b/index.css
@@ -1,8 +1,9 @@
+/*Para todos*/
 body{
     margin: 0;
 }
 .titulo{
-    padding-left: 38%;
+    text-align: center;
     border: 1px black solid;
     background-color: #95ffc5;
 }
@@ -11,22 +12,13 @@ body{
     background-color: #fad48d;
     border: 1px black solid;
     display: inline-block;
-    position: fixed;
     width: 100%;
     text-align: center;
-    position: fixed;
-}
-
-.parrafos{
-    padding-right: 1%;
-    padding-left: 1%;
-    margin-top: 5%;
-    text-align: justify;
 }
 
 .enlaces{
     margin-top: 6%;
-    padding-left: 45%;
+    text-align: center;
     border: 1px black solid;
     position: fixed;
     bottom: 0;
@@ -35,14 +27,59 @@ body{
     padding-top: 0.7%;
     padding-bottom: 0.7%;
 }
-
-.Parrafos_4{
-    margin-top: 2%;
+/*index.html*/
+.parrafos{
+    padding-right: 1%;
+    padding-left: 1%;
+    margin-top: 5%;
+    text-align: justify;
 }
 
+/*Pagina2.html*/
 .Parrafos_2{
-margin-top: 4%;
+    margin-top: 4%;
+    }
+
+/*Pagina4.html*/
+.Parrafos_4{
+    margin-top: 1%;
+    margin-left: 1%;
 }
+
+.enunciado_4{
+    margin-top:2%;
+    text-align: center;
+}
+
+.ev_energia{
+    margin-top: 1%;
+}
+
+.img_1{
+    position: absolute;
+    opacity: 1;
+    z-index: 0;
+    border: 1px black solid;
+}
+
+.img_2{
+    position: absolute;
+    width: 30%;
+    z-index: -1;
+    opacity: 0;
+    border: 1px black solid;
+}
+
+.img_1:hover + .img_2{
+    z-index: 1;
+    cursor: crosshair;
+    opacity: 1;
+}
+
+.Texto_4{
+    margin-bottom: 1%;
+}
+
 i-a{
     margin-top: 2%;
     margin-left: 2%;
