--- a/index.css
+++ b/index.css
@@ -45,35 +45,54 @@ body{
     margin-top: 1%;
     margin-left: 1%;
     width: 60%;
+    float: left;
+    margin-right: 4%;
 }
 
 .enunciado_4{
-    margin-top:2%;
+    padding-top:1%;
+    padding-bottom: 1%;
     text-align: center;
+    border: 1px black solid;
+    background-color: #71cf9b;
+    font-family: "Trebuchet MS";
+    font-size: larger;
+    font-weight:bold;
 }
 
 .img_1{
     margin-top: 1%;
-    padding-left: 1%;
-    margin-bottom: 5%;
-    width: 60%;
+    margin-bottom: 4%;
     position: relative;
     display: flex;
     flex-flow: row;
     background-size:cover ;
+    width: 30%;
+    max-width: 30%;
+    border: 1px black solid;
 }
 
 .img_2{
     margin-top: 1%;
-    padding-left: 1%;
     margin-bottom: 5%;
-    width: 60%;
+    position: relative;
+    display: flex;
+    flex-flow: row;
+    background-size:cover ;
+    width: 30%;
+    max-width: 30%;
+    border: 1px black solid;
 }
 
 .Texto_4{
     margin-bottom: 1%;
     text-align: justify;
     margin-bottom: 2%;
+    font-size: large;
+}
+
+.lista{
+    margin-bottom: 1%;
 }
 
 i-a{
