--- a/index.css
+++ b/index.css
@@ -40,28 +40,8 @@ body{
     margin-top: 4%;
     }
 
-/*Pagina4.html*/
-.Parrafos_4{
-    margin-top: 1%;
-    margin-left: 1%;
-    width: 60%;
-    float: left;
-    margin-right: 4%;
-}
-
 .enunciado_2{
     margin-top: -4%;
-    padding-top:1%;
-    padding-bottom: 1%;
-    text-align: center;
-    border: 1px black solid;
-    background-color: #71cf9b;
-    font-family: "Trebuchet MS";
-    font-size: larger;
-    font-weight:bold;
-}
-
-.enunciado_4{
     padding-top:1%;
     padding-bottom: 1%;
     text-align: center;
@@ -83,30 +63,6 @@ body{
     font-weight:bold;
 }
 
-.img_1{
-    margin-top: 1%;
-    margin-bottom: 4%;
-    position: relative;
-    display: flex;
-    flex-flow: row;
-    background-size:cover ;
-    width: 30%;
-    max-width: 30%;
-    border: 1px black solid;
-}
-
-.img_2{
-    margin-top: 1%;
-    margin-bottom: 5%;
-    position: relative;
-    display: flex;
-    flex-flow: row;
-    background-size:cover ;
-    width: 30%;
-    max-width: 30%;
-    border: 1px black solid;
-}
-
 .texto2-1{
     margin-left: 3%;
     margin-top: 1%;
@@ -122,21 +78,11 @@ body{
 
 }
 
-.Texto_4{
-    margin-bottom: 1%;
-    text-align: justify;
-    margin-bottom: 2%;
-    font-size: large;
-}
 .texto5{
     margin-left: 3%;
     margin-top: 1%;
     text-align: justify;
     margin-bottom: 2%;
-}
-
-.lista{
-    margin-bottom: 1%;
 }
 
 .i-a{
@@ -190,4 +136,88 @@ body{
     max-width: 20%;
     border: 1px black solid;
     margin-left: 35%;
+}
+
+/*Pagina4.html*/
+.Parrafos_4{
+    margin-top: 1%;
+    margin-left: 1%;
+    width: 60%;
+    float: left;
+    margin-right: 4%;
+}
+
+.enunciado_4{
+    padding-top:1%;
+    padding-bottom: 1%;
+    text-align: center;
+    border: 1px black solid;
+    background-color: #71cf9b;
+    font-family: "Trebuchet MS";
+    font-size: larger;
+    font-weight:bold;
+}
+
+.Img_1{
+    margin-top: 1%;
+    margin-bottom: 5%;
+    position: relative;
+    display: flex;
+    flex-flow: row;
+    background-size:cover ;
+    width: 30%;
+    max-width: 30%;
+    border: 1px black solid;
+}
+
+.Img_2{
+    margin-top: 1%;
+    margin-bottom: 5%;
+    position: relative;
+    display: flex;
+    flex-flow: row;
+    background-size:cover ;
+    width: 30%;
+    max-width: 30%;
+    border: 1px black solid;
+}
+
+.Texto_4{
+    margin-bottom: 1%;
+    text-align: justify;
+    margin-bottom: 2%;
+    font-size: large;
+}
+
+.Lista{
+    margin-bottom: 1%;
+}
+
+.Logo_youtube{
+    max-width: 2%;
+    margin-right: 1.6%;
+}
+
+.Ree_logo{
+    max-width: 6%;
+    margin-right: 1.2%;
+}
+
+.irena_logo{
+    max-width: 7%;
+    margin-right: 1.3%;
+}
+
+.ucs_logo{
+    max-width: 5%;
+    margin-right: 1.3%;
+}
+
+.asequible_logo{
+    max-width: 2.5%;
+}
+
+.Logo_youtube:hover,.Ree_logo:hover,.irena_logo:hover,.ucs_logo:hover,.asequible_logo:hover{
+    transition: all .4s ease-in-out;
+    transform: scale(1.3);
 }
