--- a/index.css
+++ b/index.css
@@ -221,3 +221,30 @@ body{
     transition: all .4s ease-in-out;
     transform: scale(1.3);
 }
+
+/*Pagina 6*/
+.Parrafo_6{
+    margin-top:1%;
+    margin-left:1%;
+    margin-right: 1%;;
+}
+
+.Texto_6{
+    text-align: justify;
+    margin-bottom: 1%;
+    font-size: large;
+}
+
+.Periodico_logo, .Transportar_logo{
+    max-width: 5%;
+    margin-right: 1.5%;
+}
+
+.Fiabilidad_logo{
+    max-width: 4%;
+}
+
+.Periodico_logo:hover, .Transportar_logo:hover, .Fiabilidad_logo:hover{
+    transition: all .4s ease-in-out;
+    transform: scale(1.3);
+}
