--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@ body{
     padding-bottom: 2.5%;
 }
 /*Pagina1.html*/
--Texto_1{
+.Texto_1{
     margin-bottom: 1%;
     text-align: justify;
     margin-bottom: 2%;
