--- a/index.css
+++ b/index.css
@@ -59,6 +59,12 @@ body{
     margin-top: 0.8%;
     padding-bottom: 2.5%;
 }
+
+.Wikipedia_logo{
+    max-width: 5%;
+    margin-right: 1.5%;
+}
+
 /*Pagina1.html*/
 .Texto_1{
     margin-bottom: 1%;
