--- a/index.css
+++ b/index.css
@@ -65,6 +65,11 @@ body{
     margin-right: 1.5%;
 }
 
+.Wikipedia_logo:hover{
+    transition: all .4s ease-in-out;
+    transform: scale(1.3);
+}
+
 /*Pagina1.html*/
 .Texto_1{
     margin-bottom: 1%;
