--- a/index.css
+++ b/index.css
@@ -71,8 +71,14 @@ body{
 }
 
 /*Pagina1.html*/
+
+.Parrafo_1{
+    margin-top:1%;
+    margin-left:1%;
+    margin-right: 1%;;
+}
+
 .Texto_1{
-    margin-bottom: 1%;
     text-align: justify;
     margin-bottom: 2%;
     font-size: large;
@@ -226,7 +232,6 @@ body{
 }
 
 .Texto_4{
-    margin-bottom: 1%;
     text-align: justify;
     margin-bottom: 2%;
     font-size: large;
