--- a/index.css
+++ b/index.css
@@ -186,6 +186,13 @@ body{
     margin-left: 35%;
 }
 
+/*Pagina3.html*/
+.Parrafo_3{
+    margin-top:1%;
+    margin-left:1%;
+    margin-right: 1%;;
+}
+
 /*Pagina4.html*/
 .Parrafos_4{
     margin-top: 1%;
