--- a/index.css
+++ b/index.css
@@ -304,3 +304,15 @@ body{
     transition: all .4s ease-in-out;
     transform: scale(1.3);
 }
+
+.P3{    margin-top: 4%;
+    margin-bottom: 4%;
+    position: relative;
+    display: flex;
+    flex-flow: row;
+    background-size:cover ;
+    width: 40%;
+    max-width: 40%;
+    border: 1px black solid;
+    margin-left: 30%;
+}
