--- a/index.css
+++ b/index.css
@@ -298,6 +298,7 @@ body{
 
 .Fiabilidad_logo{
     max-width: 4%;
+    margin-right: 1.5%;
 }
 
 .Periodico_logo:hover, .Transportar_logo:hover, .Fiabilidad_logo:hover{
