--- a/index.css
+++ b/index.css
@@ -306,7 +306,8 @@ body{
     transform: scale(1.3);
 }
 
-.P3{    margin-top: 4%;
+.P3{    
+    margin-top: 4%;
     margin-bottom: 4%;
     position: relative;
     display: flex;
