--- a/index.css
+++ b/index.css
@@ -323,3 +323,16 @@ body{
     border: 1px black solid;
     margin-left: 30%;
 }
+
+.P4{    
+    margin-top: 4%;
+    margin-bottom: 4%;
+    position: relative;
+    display: flex;
+    flex-flow: row;
+    background-size:cover ;
+    width: 25%;
+    max-width: 25%;
+    border: 1px black solid;
+    margin-left: 30%;
+}
