--- a/index.css
+++ b/index.css
@@ -152,6 +152,7 @@ body{
     max-width: 40%;
     border: 1px black solid;
     margin-left: 30%;
+    pading-bottom:1%;
 }
 .n{
     margin-top: -1%;
